--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         --gold: #a02d4e;
         --pink-glow: 0 0 18px #b03a5b, 0 0 32px #6e183444;
     }
+
+    html {
+        background: var(--main-bg);
+    }
+        
     body {
         margin: 0;
         font-family: 'Montserrat', Arial, sans-serif;
